<resources>
    <string name="app_name">Blog App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login and Register-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="register_account">Register account</string>

    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_up_with_google">Sign up with Google</string>

    <!--    Dialog Report Post    -->
    <string name="dialog_report_title">Report post</string>
    <string name="dialog_report_title_spinner">"Help us understand what's the problem. What is going on with this Post?"</string>
    <string name="dialog_report_title_message_box">"Could you give us a brief description of the problem with the Post?"</string>
    <string name="dialog_spinner_option_spam">"It's suspicious or spam"</string>
    <string name="dialog_spinner_option_harmful">"It's abusive or harmful"</string>

    <string name="dialog_positive_button">Send report</string>
    <string name="dialog_negative_button">Cancel</string>

    <!--    List Settings Fragment-->
    <string name="row_list_settings_reports">Reported posts</string>
    <string name="row_list_settings_count_posts">Posts</string>
    <string name="row_list_settings_delete_account">Delete account</string>

    <string name="settings_fragment_other_options">Other options</string>
    <string name="row_list_settings_preferences">Preferences</string>

    <!--    Preferences    -->
    <!--    Preferences Strings  -->
    <string name="preference_value_dark_theme">Dark theme</string>

    <!--    Preference Keys    -->
    <string name="preference_key_dark_theme">preference_key_dark_theme</string>

</resources>