<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.auth.login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AuthTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/AuthTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username_or_email"
                    android:text="robercoding@gmail.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AuthTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grayLight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/AuthTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="robercoding" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/secondaryText" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blueGray"
                android:text="@string/login"
                android:textColor="@color/primaryText" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blueTwitter"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blueGray"

            android:padding="10dp"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/primaryText" />

        <Button
            android:id="@+id/btnRegisterGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/blueGray"
            android:padding="10dp"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/primaryText"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
